Parcial04 - Add set main photo in API
